# AndroidUSBCamera-fork

./: .gitignore  MTK芯片修改分析.md  build.gradle  build.sh  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/java/com/jiangdg/demo/: DemoFragment.kt
gradle/wrapper/: gradle-wrapper.properties
libausbc/src/main/java/com/jiangdg/ausbc/: MultiCameraClient.kt
libausbc/src/main/java/com/jiangdg/ausbc/base/: CameraActivity.kt  CameraFragment.kt  MultiCameraFragment.kt
libausbc/src/main/java/com/jiangdg/ausbc/camera/: CameraUVC.kt  CameraUvcStrategy.kt
libausbc/src/main/java/com/jiangdg/ausbc/camera/bean/: CameraRequest.kt
libausbc/src/main/java/com/jiangdg/ausbc/encode/muxer/: Mp4Muxer.kt
libausbc/src/main/java/com/jiangdg/ausbc/utils/: MediaUtils.kt
libnative/: build.gradle
libnative/src/main/cpp/: CMakeLists.txt
libnative/src/main/cpp/module/yuv/: yuv.h
libuvc/: build.gradle
libuvc/src/main/java/com/jiangdg/uvc/: UVCCamera.java
libuvc/src/main/jni/: Application.mk
libuvc/src/main/jni/UVCCamera/: UVCCamera.cpp  UVCCamera.h  serenegiant_usb_UVCCamera.cpp
libuvc/src/main/jni/libuvc/include/libuvc/: libuvc_internal.h
libuvc/src/main/jni/libuvc/src/: stream.c
